# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
gendiff/: argparser.py  generate_diff.py  parse.py  tree_generator.py
gendiff/formatters/: format_selector.py  json_.py  plain.py  stringify.py  stylish.py
gendiff/modules/: generate_diff.py  parse.py  parse_flat_files.py  parse_json.py  parse_yaml.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file1.yml  flat_diff.json  nested_diff.json  second_flat_file.yaml
