[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ezhov_dv <alldost@bk.ru>"]
readme = "README.md"
packages = [
    {include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"
pyyml = "^0.0.2"
pyyaml = "^6.0.1"
simplejson = "^3.19.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
